force-app/main/default/objects/DA_UploadFile__mdt/DA_UploadFile__mdt.object-meta.xml
<CustomObject>
    <label>DA_UploadFile</label>
    <pluralLabel>DA_UploadFile</pluralLabel>
</CustomObject>