force-app/main/default/objects/DA_UploadFile__mdt/fields/AllowMultipleUpload__c.field-meta.xml
<CustomField>
    <fullName>AllowMultipleUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowMultipleUpload</label>
    <type>Checkbox</type>
</CustomField>