force-app/main/default/objects/DA_UploadFile__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>Nom API du champ à concaténer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>