force-app/main/default/objects/DA_UploadFile__mdt/fields/Filter_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_API_Name__c</fullName>
    <label>Filter Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>