force-app/main/default/objects/DA_UploadFile__mdt/fields/Filtre__c.field-meta.xml
<CustomField>
    <fullName>Filtre__c</fullName>
    <label>Filtre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>