force-app/main/default/objects/DA_UploadFile__mdt/fields/Nom_de_fichier__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_fichier__c</fullName>
    <label>Nom de fichier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>