force-app/main/default/objects/DA_UploadFile__mdt/fields/NomDeFichier__c.field-meta.xml
<CustomField>
    <fullName>NomDeFichier__c</fullName>
    <label>NomDeFichier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>