force-app/main/default/objects/DA_UploadFile__mdt/fields/Profils__c.field-meta.xml
<CustomField>
    <fullName>Profils__c</fullName>
    <label>Profils</label>
    <length>255</length>
    <type>Text</type>
</CustomField>