force-app/main/default/objects/DA_UploadFile__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>