force-app/main/default/objects/DA_UploadFile__mdt/fields/SuccessMessage__c.field-meta.xml
<CustomField>
    <fullName>SuccessMessage__c</fullName>
    <label>SuccessMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>