force-app/main/default/objects/DA_UploadFile__mdt/fields/Type_de_marchand__c.field-meta.xml
<CustomField>
    <fullName>Type_de_marchand__c</fullName>
    <label>Type de marchand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
                <default>true</default>
                <label>Association</label>
            </value>
            <value>
                <fullName>Auto-entrepreneur</fullName>
            </value>
            <value>
                <fullName>Société</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>